# Sandshroud

./: .gitignore
cmake/: CMakeLists.txt
cmake/dependencies/: CMakeLists.txt
cmake/dependencies/bzip2/: CMakeLists.txt
cmake/dependencies/consolelog/: CMakeLists.txt
cmake/dependencies/detour/: CMakeLists.txt
cmake/dependencies/g3dlite/: CMakeLists.txt
cmake/dependencies/libmpq1/: CMakeLists.txt
cmake/dependencies/libmpq2/: CMakeLists.txt
cmake/dependencies/lualib/: CMakeLists.txt
cmake/dependencies/pcre/: CMakeLists.txt
cmake/dependencies/recast/: CMakeLists.txt
cmake/dependencies/zlib/: CMakeLists.txt
cmake/detour/: CMakeLists.txt
cmake/g3dlite/: CMakeLists.txt
cmake/hearthstone-logon/: CMakeLists.txt
cmake/hearthstone-shared/: CMakeLists.txt
cmake/hearthstone-world/: CMakeLists.txt
cmake/lacrimi/: CMakeLists.txt
cmake/libmpq1/: CMakeLists.txt
cmake/pcre/: CMakeLists.txt
cmake/recast/: CMakeLists.txt
cmake/tools/: CMakeLists.txt
cmake/tools/dataextractor/: CMakeLists.txt
cmake/tools/itemdbcgenerator/: CMakeLists.txt
cmake/tools/mmapbuilder/: CMakeLists.txt
cmake/tools/vmapassembler/: CMakeLists.txt
cmake/tools/vmapextractor/: CMakeLists.txt
cmake/zlib/: CMakeLists.txt
configs/: hearthstone-logonserver.conf  hearthstone-options.conf  hearthstone-world.conf
dependencies/SH/: extract_git_version.sh
dependencies/SRC/: RecastNavigationR351.rar  SharedDependencyDefines.h  VC110-pcre.vcxproj  VC110-solution.sln  VC110-zlib.vcxproj  VC110-zlib.vcxproj.filters  VC90-pcre.vcproj  VC90-solution.sln  VC90-zlib.vcproj
dependencies/SRC/consolelog/: defines.h  log.cpp  log.h
dependencies/SRC/database/: DirectDatabase.h
dependencies/SRC/dbclib/: DBC.cpp  DBC.h  DBCLib.h  dbcfile.cpp
dependencies/SRC/detour/: DetourNavMesh.cpp
dependencies/SRC/g3dlite/: AABox.cpp  AABox.h  Any.cpp  Any.h  AreaMemoryManager.cpp  Array.h  AtomicInt32.h  BinaryFormat.cpp  BinaryFormat.h  BinaryInput.cpp  BinaryInput.h  BinaryOutput.cpp  BinaryOutput.h  Box.cpp  Box.h  CollisionDetection.cpp  Color1uint8.cpp  Color1uint8.h  Color3.cpp  Color3.h  Color3uint8.cpp  Color3uint8.h  Color4.cpp  Color4.h  Color4uint8.cpp  Color4uint8.h  Crypto.h  Crypto_md5.cpp  FileSystem.cpp  G3D.h  G3DAll.h  GCamera.cpp  GImage.cpp  GImage.h  GImage_bmp.cpp  GImage_jpeg.cpp  GImage_ppm.cpp  GImage_tga.cpp  GUniqueID.cpp  HashTrait.h  (+64 more)
dependencies/SRC/libmpq1/: common.cpp  common.h  explode.cpp  extract.cpp  huffman.cpp  mpq.cpp  mpq.h  parser.cpp  wave.cpp  wave.h
dependencies/SRC/libmpq2/: common.c  common.h  explode.c  explode.h  extract.c  extract.h  huffman.c  huffman.h  mpq-internal.h  mpq.c  mpq.h  platform.h  wave.c  wave.h
dependencies/SRC/network/: DirectSocket.cpp  DirectSocket.h  Network.h
dependencies/SRC/threading/: CrashHandler.cpp  CrashHandler.h  Errors.h  Mutex.cpp  ThreadStarter.h
dependencies/SRC/win/: VC110-detour.vcxproj  VC110-g3dlite.vcxproj  VC110-g3dlite.vcxproj.filters  VC110-pcre.vcxproj  VC110-recast.vcxproj  VC110-zlib.vcxproj  VC110-zlib.vcxproj.filters  VC90-pcre.vcproj  VC90-zlib.vcproj
dependencies/VC/libVC110/: detour.lib  pcre.lib  recast.lib  zlib.lib
extras/Extractor/Win/: ad110.vcxproj
extras/Extractor/libmpq/: extract.cpp
extras/mMap Builder/src/: MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp
extras/vMap Assembler/: vmap_assembler.cpp
extras/vMap Assembler/VC110/: vmap_assembler.vcxproj  vmap_assembler.vcxproj.filters
extras/vMap Extractor/vmapextract/: adtfile.cpp  adtfile.h  format.h  model.cpp  model.h  mpq_libmpq.cpp  mpq_libmpq04.h  vmapexport.cpp  vmapexport.h  wdtfile.h  wmo.cpp
extras/vMap Extractor/win/: vmapExtractor4_VC110.sln
extras/vmaps/: make_vmaps.bat  makevmaps_SIMPLE.bat
sql/Base/: characters_template.sql
sql/Character/: README.txt
sql/Log/: README.txt
sql/Logon/: README.txt  template_account.sql
sql/World/: README.txt
sql/db_character/: 05_21_2014_playerglyphs.sql
sql/db_world/: 2014_12_27_totemdisplayids.sql
sql/templates/: template_account.sql  template_character.sql  template_world.sql
src/: hearthstone-logonserver.ini  hearthstone-world.ini  lacrimi.ini
src/Lacrimi/Source/: Lacrimi.cpp  Lacrimi.h
src/hearthstone-logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AutoPatcher.cpp  AutoPatcher.h  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.h  Main.cpp  Main.h  PeriodicFunctionCall_Thread.h
src/hearthstone-shared/: ByteBuffer.h  ByteConverter.h  CallBack.cpp  CallBack.h  Common.h  CrashHandler.cpp  CrashHandler.h  Errors.h  LocationVector.h  Log.cpp  MemoryLeaks.h  MersenneTwister.cpp  MersenneTwister.h  NameTables.h  RC4Engine.h  Singleton.h  StackWalker.cpp  StackWalker.h  Storage.h  Timer.h  Util.cpp  Util.h  WorldPacket.h  format.h  git_version.h  hearthstone_log.h
src/hearthstone-shared/Auth/: BigNumber.cpp  HMAC.h  MD5.h  RSA.h  Sha1.h
src/hearthstone-shared/Client/: AuthCodes.h  OpcodeList.h
src/hearthstone-shared/Config/: Config.cpp  IniFiles.cpp  IniFiles.h
src/hearthstone-shared/DataStorage/: Database.cpp  Database.h  DatabaseEngine.h  (+2 more)
src/hearthstone-world/: AreaTrigger.h  AuraInterface.cpp  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  ChatHandler.cpp  CollideInterface.cpp  CollideInterface.h  ConsoleCommands.cpp  ConsoleListener.cpp  Const.h  Creature.cpp  Creature.h  DayWatcherThread.h  GameObject.cpp  GameObject.h  GuildManager.cpp  GuildManager.h  GuildManagerFunctions.cpp  ItemHandler.cpp  Level0.cpp  Level2.cpp  Level3.cpp  LogonCommClient.cpp  LogonCommClient.h  LogonCommHandler.cpp  MapManagerScript.h  MapMgr.cpp  MapMgr.h  Master.cpp  Master.h  MiscHandler.h  MovementHandler.cpp  NavMeshInterface.cpp  Object.cpp  ObjectMgr.h  ObjectStorage.cpp  Player.cpp  Player.h  (+13 more)
win/: hearthstoneVC110 - All.sln
win/VC110/: hearthstone-logonserver.vcxproj  hearthstone-shared.vcxproj  hearthstone-shared.vcxproj.filters  hearthstone-world.vcxproj  hearthstone-world.vcxproj.filters
(+322 files in other folders)
